--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <a href="#" class="remove">remove</a>
     {{ text }}
     <div>
-      Posted By: <strong> {{ name }} </strong>
+      Posted By: <strong> {{ user }} </strong>
     </div>
     <hr/>
   </script>
