--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="node_modules/underscore/underscore-min.js"></script>
     <script src="node_modules/backbone/backbone-min.js"></script>
-  <title></title>
+  <title>Reddit Backbone</title>
 </head>
 <body>
   <div class="row">
